@@ -1,3 +1,7 @@
+2017-06-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (anytime_cpp): Clone numeric inputs to preserver
+
 2017-06-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.3.0
